<resources>
    <string name="app_name">NotepadPreferencesApp</string>
    <string name="mnuSave">Сохранить</string>
    <string name="mnuOpen">Открыть</string>
    <string name="action_settings">Настройки</string>
    <string name="pref_open_mode">Режим открытия</string>
    <string name="pref_color">Цвет</string>
    <string name="pref_color_black">Черный цвет</string>
    <string name="pref_color_red">Красный цвет</string>
    <string name="pref_color_green">Зеленый цвет</string>
    <string name="pref_color_blue">Синий цвет</string>
    <string name="pref_size">Размер</string>
    <string name="pref_style">Стиль</string>
    <string name="pref_style_regular">Нормальный</string>
    <string name="pref_style_bold">Полужирный</string>
    <string name="pref_style_italic">Курсив</string>
</resources>
